# callweaver

./: AUTHORS  BUGS  CREDITS  ChangeLog  HARDWARE  INSTALL  InstallGuide.txt  Makefile  Makefile.am  Makefile.in  README  README.md  ROADMAP.TXT  SECURITY  TODO_FOR_AUTOMAKE  UPGRADE.txt  acinclude.m4  acl.c  aesopt.h  alaw.c  app.c  astmm.c  autoservice.c  bootstrap.sh  callerid.c  callweaver.8  callweaver.sgml  cdr.c  channel.c  chanvars.c  cli.c  config.c  configure  configure.ac  configure.in  db.c  devicestate.c  dlfcn.c  dns.c  dnsmgr.c  (+62 more)
agi/: DialAnMp3.agi  DialAnMp3.agi.in  Makefile.am  Makefile.in  agi-test.agi  agi-test.agi.in  eagi-sphinx-test.c  eagi-test.c  fastagi-test  fastagi-test.in  numeralize  numeralize.in
apps/: Makefile  Makefile.am  Makefile.in  app_adsiprog.c  app_alarmreceiver.c  app_authenticate.c  app_backgrounddetect.c  app_backticks.c  app_cdr.c  app_changrab.c  app_chanisavail.c  app_chanspy.c  app_controlplayback.c  app_curl.c  app_cut.c  app_datetime.c  app_db.c  app_devstate.c  app_dial.c  app_dictate.c  app_directed_pickup.c  app_directory.c  app_disa.c  app_dtmftotext.c  app_dumpchan.c  app_echo.c  app_enumlookup.c  app_eval.c  app_exec.c  app_externalivr.c  app_faxdetect.c  app_festival.c  app_flash.c  app_forkcdr.c  app_getcpeid.c  app_getdevstate.c  app_getextstate.c  app_groupcount.c  app_hasnewvoicemail.c  app_ices.c  (+70 more)
cdr/: Makefile  Makefile.am  Makefile.in  cdr_csv.c  cdr_custom.c  cdr_manager.c  cdr_mysql.c  cdr_odbc.c  cdr_pgsql.c  cdr_pgsql_custom.c  cdr_sqlite.c  cdr_sqlite3.c  cdr_sqlite3_custom.c  cdr_tds.c
channels/: Makefile  Makefile.am  Makefile.in  adtranvofr.h  c20msg.c  chan_agent.c  chan_alsa.c  chan_bluetooth.c  chan_bluetooth.h  chan_capi.c  chan_capi_rtp.c  chan_exosip2.c  chan_fax.c  chan_features.c  chan_h323.c  chan_iax2.c  chan_local.c  chan_mgcp.c  chan_modem.c  chan_modem_aopen.c  chan_modem_bestdata.c  chan_modem_i4l.c  chan_nbs.c  chan_oss.c  chan_oss_old.c  chan_phone.c  chan_sip.c  chan_sip.c.orig  chan_skel.c  chan_skinny.c  chan_unicall.c  chan_visdn.c  chan_visdn.h  chan_vpb.c  chan_woomera.c  chan_zap.c  faxmodem.c  faxmodem.h  gentone-ulaw.c  gentone.c  (+4 more)
codecs/: Makefile.am  Makefile.in  codec_a_mu.c  codec_adpcm.c  codec_alaw.c  codec_dvi_adpcm.c  codec_g722.c  codec_g722_16k_8k.c  codec_g723_1.c  codec_g726.c  codec_g726_32kbps.c  codec_gsm.c  codec_ilbc.c  codec_lpc10.c  codec_oki_adpcm.c  codec_speex.c  codec_ulaw.c  g723_slin_ex.h  log2comp.h  slin_g726_ex.h
configs/: Makefile.am  adsi.conf.sample  adtranvofr.conf.sample  agents.conf.sample  alarmreceiver.conf.sample  alsa.conf.sample  callweaver.adsi.sample  callweaver.conf.sample.in  capi.conf.sample  cdr.conf.sample  cdr_custom.conf.sample  cdr_manager.conf.sample  cdr_mysql.conf.sample  cdr_odbc.conf.sample  cdr_pgsql.conf.sample  cdr_pgsql_custom.conf.sample  cdr_sqlite3_custom.conf.sample  cdr_tds.conf.sample  chan_bluetooth.conf  chan_bluetooth.conf.sample  chan_dahdi.conf.sample  chan_fax.conf.sample  chan_visdn.conf.sample  codecs.conf.sample  curl.conf.sample  dnsmgr.conf.sample  dundi.conf.sample  enum.conf.sample  extconfig.conf.sample  extensions.ael.sample  extensions.conf.sample  features.conf.sample  festival.conf.sample  iax.conf.sample  indications.conf.sample  ldap.conf.sample  logger.conf.in  logger.conf.sample  logger.conf.sample.in  manager.conf.sample  (+33 more)
corelib/: Makefile.am  acl.c  aescrypt.c  aeskey.c  aesopt.h  alaw.c  app.c  ast_expr2.c  ast_expr2.fl  ast_expr2.y  ast_expr2f.c  autoservice.c  blacklist.c  callerid.c  callweaver.c  callweaver_expr2-common.h  callweaver_expr2.c  callweaver_expr2.fl  callweaver_expr2.h  callweaver_expr2.l  callweaver_expr2.y  callweaver_expr2f.c  callweaver_expr2w.c  callweaver_hash.c  callweaver_mm.c  cdr.c  channel.c  chanvars.c  cli.c  config.c  connection.c  console.c  console.h  crypto.c  curl.c  db.c  defaults.h.in  devicestate.c  directory_engine.c  dlfcn.c  (+77 more)
directories/: Makefile.am  directories.conf  direngine_embedded.c
editline/: ChangeLog  Makefile.am  Makefile.in  chared.c  common.c  config.h.in  configure  configure.ac  configure.in  el.c  emacs.c  filecomplete.c  history.c  key.c  map.c  parse.c  read.c  readline.c  search.c  term.c  tty.c  vi.c
filestreams/: Makefile.am  filestream_sndfile.c  filestream_template.c
formats/: Makefile  Makefile.am  Makefile.in  format_au.c  format_g723.c  format_g723_1.c  format_g726.c  format_g729.c  format_gsm.c  format_h263.c  format_ilbc.c  format_jpeg.c  format_ogg_vorbis.c  format_pcm.c  format_pcm_alaw.c  format_sln.c  format_vox.c  format_wav.c  format_wav_gsm.c  msgsm.h
funcs/: Makefile  Makefile.am  Makefile.in  func_callerid.c  func_cdr.c  func_config.c  func_core.c  func_curl.c  func_db.c  func_enum.c  func_env.c  func_fileexists.c  func_groupcount.c  func_language.c  func_logic.c  func_math.c  func_md5.c  func_moh.c  func_strings.c  func_timeout.c  func_uri.c  pbx_functions.c  pbx_functions.h
ogi/: Makefile.am  eogi-sphinx-test.c  eogi-test.c  fastogi-test.in  ogi-test.ogi.in
pbx/: Makefile  Makefile.am  Makefile.in  dundi-parser.c  dundi-parser.h  pbx_ael.c  pbx_config.c  pbx_dundi.c  pbx_gtkconsole.c  pbx_kdeconsole.cc  pbx_kdeconsole.h  pbx_kdeconsole_main.cc  pbx_loopback.c  pbx_realtime.c  pbx_spool.c
res/: Makefile  Makefile.am  Makefile.in  res_adsi.c  res_agi.c  res_config_curl.c  res_config_mysql.c  res_config_odbc.c  res_config_pgsql.c  res_crypto.c  res_features.c  res_indications.c  res_jabber.c  res_js.c  res_manager.c  res_monitor.c  res_musiconhold.c  res_noise.c  res_odbc.c  res_ogi.c  res_osp.c  res_snmp.c  res_sqlite.c  res_srtp.c
sounds/: Makefile.am
sqlite3-embedded/: Makefile.am  mkopcodeh.awk.in  sqlite3.pc
stdtime/: Makefile.am  Makefile.in  localtime.c  test.c
system/: Makefile.am  callweaver.in  rc.callweaver.debian.in  rc.callweaver.gentoo.in  rc.callweaver.mandrake.in  rc.callweaver.redhat.in  rc.callweaver.slackware.in  rc.callweaver.suse.in  safe_callweaver.8.in  safe_callweaver.in
utils/: Makefile  Makefile.am  Makefile.in  astman.1  astman.c  cc.in  check_expr.c  cw_mixer  smsq.c  (+6 more)
(+827 files in other folders)
